fixed jinja2 whitespace trim, move script tag up, re-add silent row class, table sorting function

--- a/trivia/static/style.css
+++ b/trivia/static/style.css
@@ -15,6 +15,8 @@ tr[data-row-index="0"] td { border-top: 0.25em solid #000; }
 .ui-header { background-color: #b51329; border-bottom: 2px solid #27233a; color: #fff; padding: 0.5em 1em; }
 /*.ui-content { padding: 0.5em 1em; }*/
 .ui-footer { }
+.ui-silent-row {color: #7c7c7c
+}
 
 .center { text-align: center; }
 .pointer { cursor: pointer; }
